# paper-meco-results

./: .gitignore  .pylintrc  LICENSE  README.md  compile.py  dashboards.py  dashboards_r2.py  dashboards_s3.py  dataviz.py  fuzzymatch.py  gen_candidate_uid.py  helper.py  lint.sh  pyproject.toml  requirements.txt
dashboards/: elections_candidates.parquet  elections_coalitions.parquet  elections_dates.parquet  elections_parties.parquet  elections_seats_winner.parquet  elections_summary.parquet
data/: consol_ballots.csv  consol_ballots.parquet  consol_stats.csv  consol_stats.parquet  jhr_se16_ballots.csv  lookup_candidate.csv  lookup_candidate.parquet  lookup_coalition.csv  lookup_coalition.parquet  lookup_coalition_succession.csv  lookup_coalition_succession.parquet  lookup_dates.csv  lookup_dates.json  lookup_dates.parquet  lookup_party.csv  lookup_party.parquet  lookup_party_succession.parquet  lookup_prk.parquet  raw_ballots.csv  raw_stats.csv
logs/: corrections.csv
src-data/: ballots_master.parquet  byelection_ballots.csv  byelection_ballots.parquet  byelection_stats.csv  byelection_stats.parquet  byelection_summary.csv  byelection_summary.parquet  candidates_master.csv  consol_ballots.csv  consol_ballots.parquet  consol_stats.csv  consol_stats.parquet  consol_summary.csv  consol_summary.parquet  dates_master.csv  dates_master.json  federal_ballots.csv  federal_ballots.parquet  federal_stats.parquet  federal_summary.csv  federal_summary.parquet  lookup_candidate.csv  lookup_candidate.parquet  lookup_candidates.csv  lookup_coalition.csv  lookup_coalition.parquet  (+60 more)
(+571 files in other folders)
