[project]
name = "paper-meco-results"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.66",
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
